tests/spec/non_conformant/errors/interpolation/mod.rs
//! Tests auto-converted from "sass-spec/spec/non_conformant/errors/interpolation"
#[allow(unused)]
use super::rsass;

// From "sass-spec/spec/non_conformant/errors/interpolation/error-1.hrx"

// Ignoring "error_1", error tests are not supported yet.
